syntax = "proto3";

package com.heji.bill;

message Bill {
    string bill_id = 1;
    string book_id = 2;
    string money = 3;
    uint32 type = 4;
    string category = 5;
    string crt_time = 6;
    string upd_time = 7;
    string dealer = 8;
    string crt_user = 9;
    string remark = 10;
}
message Bills {
    repeated Bill bills = 1;
}